src/test/resources/public/input/typechecking/pass/pass07.jova
class Evaluation{

  private int func1(){
    return 1;
  }

   public string func1(int a, int b, string asdf){
      int x, zz;

      return "somestr";
   }

}

