src/test/resources/public/input/typechecking/fail/unknown_type/fail02.jova
class Test {

  public int a() {
    int a;

    return 0;
  }

   public Onknown func1(int param){
     return 1;
   }
}
